--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "lerna bootstrap",
     "clean": "lerna run clean",
     "build": "lerna run build",
+    "rebuild": "lerna run clean && lerna run build",
     "lint": "lerna run lint",
     "docs": "api-documenter markdown -i ./etc/api -o ./docs"
   },
