--- a/etc/tsconfig_base.json
+++ b/etc/tsconfig_base.json
@@ -7,6 +7,7 @@
     "declarationMap": true,
     "strict": true,
     "noUnusedLocals": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "experimentalDecorators": true
   }
 }
